--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .book{
 
    
-    margin-bottom: 10px;
-    width: 18rem;
+    margin-top: 20px !important;
+    width: 21rem;
     margin: 0 auto;
 }
